basiliq/src/serve/tests/requests/create/snapshots/basiliq__serve__tests__requests__create__sparse__one_fields.snap
---
source: basiliq/src/serve/tests/requests/create/sparse.rs
expression: res

---
{
  "type": "public__peoples",
  "id": "[uuid]",
  "attributes": {
    "first-name": "Francis"
  }
}
