basiliq/src/serve/tests/requests/create/snapshots/basiliq__serve__tests__requests__create__sparse__unknown_fields.snap
---
source: basiliq/src/serve/tests/requests/create/sparse.rs
expression: res

---
{
  "errors": {
    "id": "[error id]",
    "status": 400,
    "title": "CibouletteUnknownField",
    "detail": "No field AAAAAAAAAAAAA for type public__peoples."
  }
}
